infrastructure/bootstrap/infrastructure/pgadmin/controller/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: rig-system
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: pgadmin
  type: ClusterIP
