infrastructure/bootstrap/infrastructure/pgadmin/controller/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: rig-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pgadmin.kind
      http:
        paths:
          - backend:
              service:
                name: pgadmin
                port:
                  number: 8080
            path: /
            pathType: Prefix
